--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "xstate-svelte",
+	"name": "xstate-for-svelte",
 	"version": "0.0.1",
 	"license": "MIT",
 	"author": {
@@ -13,7 +13,8 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore  --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"package": "svelte-kit package"
 	},
 	"peerDependencies": {
 		"xstate": "^4.23.4"
@@ -25,15 +26,16 @@
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.2.0",
+		"playwright": "^1.14.1",
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
 		"svelte": "^3.34.0",
 		"svelte-check": "^2.0.0",
 		"svelte-preprocess": "^4.0.0",
+		"svelte2tsx": "^0.4.6",
 		"tslib": "^2.0.0",
-		"typescript": "^4.0.0",
-		"xstate": "^4.23.4",
-		"playwright": "^1.14.1"
+		"typescript": "^4.4.3",
+		"xstate": "^4.23.4"
 	},
 	"type": "module"
 }
